# choco-cheddar-charlie

./: .gitignore  CMakeLists.txt
include/: config.hpp  controls.hpp  error.hpp  event_handler.hpp  fps.hpp  game_state.hpp  player.hpp  sdl_ptr.hpp  sprite.hpp  sprites.hpp  texture.hpp  timer.hpp  vec2.hpp
res/: Charlie.ase  build_assets  misc.ase
res/ase/: charlie-quinn.ase  charlie.ase  cheese.ase  chocolate.ase  grass.ase
src/: event_handler.cpp  main.cpp  sprite.cpp  sprite_loader.cpp
